@@ -10,23 +10,28 @@ import java.awt.Color;
  */
 public class Solute {
 
-    public final String name;
-    public final String formula;
-    public final double saturatedConcentration; // M
-    public final Color solutionColor; // the solute's color in a fully-saturated solution
-    public final Color precipitateColor; // the solute's color as a precipitate
+    public final String name; // localized name
+    public final String formula; // chemical formula, not localized
+    public final double molarMass; // g/mol
+    public final double saturatedConcentration; // M, in beaker
+    public final double solutionConcentration; // M, in dropper
+    public final Color solutionColor; // color in a fully-saturated solution
+    public final Color precipitateColor; // color as a precipitate
     public final double precipitateSize; // size of the precipitate particles in view coordinates
     public final int precipitateParticlesPerMole; // number of precipitate particles to show per mol of saturation
 
     // For most solutes, the color of the precipitate is the same as the color in solution.
-    public Solute( String name, String formula, double maxConcentration, Color solutionColor, double precipitateSize, int precipitateParticlesPerMole ) {
-        this( name, formula, maxConcentration, solutionColor, solutionColor, precipitateSize, precipitateParticlesPerMole );
+    public Solute( String name, String formula, double molarMass, double saturatedConcentration, double solutionConcentration, Color solutionColor, double precipitateSize, int precipitateParticlesPerMole ) {
+        this( name, formula, molarMass, saturatedConcentration, solutionConcentration, solutionColor, solutionColor, precipitateSize, precipitateParticlesPerMole );
     }
 
-    public Solute( String name, String formula, double saturatedConcentration, Color solutionColor, Color precipitateColor, double precipitateSize, int precipitateParticlesPerMole ) {
+    public Solute( String name, String formula, double molarMass, double saturatedConcentration, double solutionConcentration,
+                   Color solutionColor, Color precipitateColor, double precipitateSize, int precipitateParticlesPerMole ) {
         this.name = name;
         this.formula = formula;
+        this.molarMass = molarMass;
         this.saturatedConcentration = saturatedConcentration;
+        this.solutionConcentration = solutionConcentration;
         this.solutionColor = solutionColor;
         this.precipitateColor = precipitateColor;
         this.precipitateSize = precipitateSize;
